--- a/css/main.scss
+++ b/css/main.scss
@@ -13,11 +13,11 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
+$text-color:       #eee;
+$background-color: #020202;
 $brand-color:      #800000;
 
-$grey-color:       #727272;
+$grey-color:       #bdbdbd;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
