--- a/css/main.scss
+++ b/css/main.scss
@@ -17,7 +17,7 @@ $text-color:       #eee;
 $background-color: #020202;
 $brand-color:      #800000;
 
-$grey-color:       #bdbdbd;
+$grey-color:       #f0f0f0;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
