--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -215,7 +215,7 @@
     }
     
     .white {
-        color: $gray-color-light;
+        color: $grey-color-light;
         font-style: normal;
     }
 
