--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -202,3 +202,19 @@ pre {
         }
     }
 }
+
+
+
+
+
+/**
+ * Custom Stuff
+ */
+.name {
+    color: $brand-color;
+}
+
+.white {
+    color: $grey-color-light;
+    font-style: normal;
+}
