--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ $spacing-unit:     30px;
 
 $text-color:       #eee;
 $background-color: #020202;
-$brand-color:      #800000;
+$brand-color:      #b33333;
 
 $grey-color:       #f0f0f0;
 $grey-color-light: lighten($grey-color, 40%);
