--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -218,5 +218,9 @@ pre {
 .white {
     color: $grey-color-light;
     font-style: normal;
+}
+
+.subtitle {
+    color: $grey-color-light;
     font-size: 4em;
 }
