--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
 
   <article class="post-content">
     {{ content }}
-    <iframe src="../works/{{ page.work}}">Your browser does not support iframes</iframe>
+    <iframe src="works/{{ page.work}}">Your browser does not support iframes</iframe>
   </article>
 
 </div>
