--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -167,7 +167,7 @@
 }
 
 .page-heading {
-    font-size: 20px;
+    font-size: 28px;
 }
 
 .post-list {
@@ -234,4 +234,8 @@
             font-size: 18px;
         }
     }
+}
+
+.post-list li {
+    border-bottom: 1px solid $grey-color-light;
 }
