Remove dummy post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
 
   <article class="post-content">
     {{ content }}
-      <object data="../../../../../works/{{ page.work}}"></object>
+      <object data="../../../../../works/{{ page.work}}" class="{{ page.work-type }}"></object>
   </article>
 
 </div>
