--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -233,6 +233,13 @@ pre {
 
 @media screen and (max-width: $on-palm) {
     .name {
-        font-size: 0.5em;
+        font-size: 4em;
+    }
+    
+    .subtitle {
+        font-size: 2em;
+    }
+    .trigger a {
+        color: $background-color;
     }
 }
