--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,6 +11,10 @@
     position: relative;
 }
 
+.trigger {
+    background-color: $grey-color-light;
+}
+
 .site-title {
     font-size: 26px;
     line-height: 56px;
