--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,12 +19,7 @@ body {
     line-height: $base-line-height;
     font-weight: 300;
     color: $text-color;
-//    background-color: $background-color;
-    background-image: url("background.jpg");
-    background-size: cover;
-    filter: blur(5px);
-    -webkit-filter: blur(5px);
-    -moz-filter: blur(5px);
+    background-color: $background-color;
     -webkit-text-size-adjust: 100%;
 }
 
