--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -172,6 +172,9 @@
  */
 .page-content {
     padding: $spacing-unit 0;
+}
+
+.background-image {
     background-image: url("../background.jpg");
     background-size: cover;
     filter: blur(3px);
@@ -179,9 +182,6 @@
     -moz-filter: blur(3px);
     z-index: -100;
 }
-
-.wrapper {
-    z-index: 0;
 
 .page-heading {
     font-size: 28px;
