--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -175,6 +175,13 @@
 }
 
 .background-image {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
     background-image: url("../background.jpg");
     background-size: cover;
     filter: blur(3px);
