--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -184,9 +184,9 @@
     bottom: 0;
     background-image: url("../background.jpg");
     background-size: cover;
-    filter: blur(3px);
-    -webkit-filter: blur(3px);
-    -moz-filter: blur(3px);
+    filter: blur(2px) brightness(60%);
+    -webkit-filter: blur(2px) brightness(60%);
+    -moz-filter: blur(2px) brightness(60%);
     z-index: -100;
 }
 
